modules/1_network/security_group/aurora.tf
resource "aws_security_group" "aurora_mysql" {
  name = "${var.project}-${var.env}-aurora-mysql-sg"
  vpc_id = var.vpc_id

  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # TEMP
  }
}
